tests/expected_invalid_private_type_leak.diag.out
<input>:6:19: error: public API cannot reference private type 'Hidden'
    public fn leak(x: Hidden) -> Int
                      ^^^^^^
